refactor(structure-scanner): 优化磁盘判空及容器访问逻辑
- 将磁盘判空方法由 hasDisk 改为 isDiskEmpty 并更新相关调用处
- 优化 SimpleContainer 内部访问，避免直接使用索引访问集合元素
- 统一使用 this 访问成员变量，提升代码规范性
- 修改 WatchableCyclingValue 回调参数，避免无用变量命名
- 修复部分方法调用缺少 this 前缀的问题
- 重构序列化和反序列化代码，保证一致性和清晰性